# opus4j

./: .gitignore  build.gradle  gradle.properties  pom.xml  readme.md  settings.gradle
.github/workflows/: release.yml
native/: CMakeLists.txt
native/cmake/: zig-aarch64-windows-gnu.cmake  zig-base.cmake  zig-x86_64-linux-gnu.cmake  zig-x86_64-macos.cmake  zig-x86_64-windows-gnu.cmake
native/include/: decoder.h  encoder.h  exceptions.h
native/src/: decoder.c  encoder.c  exceptions.c
rust/: Cargo.toml
rust/src/: lib.rs
rust/src/opus/: decoder.rs  encoder.rs  exceptions.rs  mod.rs
src/main/java/de/maxhenkel/opus4j/: LibraryLoader.java  Opus.java  OpusDecoder.java  OpusEncoder.java  UnknownPlatformException.java
src/main/resources/: LIBOPUS_SYS_LICENSE.txt  OPUS_RS_LICENSE
src/test/java/de/maxhenkel/opus4j/: OpusDecoderTest.java  OpusEncoderTest.java
